# scotty-example

./: .gitignore  Main.hs  num.perl  scotty-example.cabal  stack.yaml
.circleci/: config.yml
github-webhook/: .gitignore  README.md  build-docker  package.yaml  stack.yaml  webhook  webhook.hs
github-webhook/docker/: Dockerfile  build
github-webhook/k8s/: github-webhook-deployment.yaml  github-webhook-service.yaml
k8s/: apply-namespace  scotty-deployment  scotty-deployment.yaml  scotty-service.yaml
scripts/: build-sysconfcpus  clean  get-num-processors  get-num-processors.hs
sysconf/: sysconf  sysconf.c
