name:          scotty-example
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          scotty-example
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , aeson
                  , lens
                  , blaze-builder
                  , blaze-markup
                  , servant
                  , servant-client
                  , parsec
                  , megaparsec
                  , trifecta
                  , amazonka
                  , yesod
                  , yesod-auth
                  , yesod-core
                  , yesod-form
                  , yesod-static
                  , yesod-persistent
                  , esqueleto
                  , http-client
                  , http-client-tls
                  , http-conduit
                  , http-types
                  , template-haskell
                  , text
                  , warp
                  , warp-tls
